--- a/style.css
+++ b/style.css
@@ -17,9 +17,10 @@
     box-sizing: border-box;
 }
 
+
 body {
     background: rgb(2, 70, 107);
-    background: linear-gradient(0deg, rgba(2, 70, 107, 1) 0%, rgba(29, 25, 30, 1) 51%);
+    background: linear-gradient(0deg, #058CD7 0%, #035A8A 5%, rgba(29, 25, 30, 1) 80%);
 }
 
 
@@ -41,12 +42,21 @@ body {
 }
 
 header {
-    background-color: #02466b71;
-    height: 200px;
+    overflow: hidden;
+    background-color: #02466b93;
+    padding: 5px 10px;
+
+    transition: 0.4s;
+
+    height: 130px;
+
+    position: fixed;
+    top: 0;
+    width: 100%;
 }
 
 header div.container-grid {
-    height: 100%;
+
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -73,7 +83,7 @@ header img {
 }
 
 .menu button {
-    background-color: rgb(9, 24, 54);
+    background-color: #011825bb;
 
     width: 250px;
     height: 40px;
@@ -81,14 +91,18 @@ header img {
     border: none;
 }
 
-.menu .um button {
+.menu button.um, button.dois {
     width: 200px;
 }
 
-.menu .dois button {
-    width: 200px;
+.menu button:hover {
+    background-color: #058CD7;
 }
 
+.conteudo-banner a {
+    color: white;
+    text-decoration: none;
+}
 .conteudo-banner p {
     color: white;
 
@@ -101,15 +115,14 @@ header img {
 
     display: flex;
     flex-direction: column;
-
     justify-content: center;
 }
 
 .conteudo-banner {
-    height: calc(100vh - 500px);
+    height: calc(100vh - 100px);
 
     display: flex;
-    gap: 18px;
+    gap: 6px;
 
     flex-direction: column;
     align-items: center;
@@ -117,9 +130,10 @@ header img {
 }
 
 
+
 .conteudo-banner button {
-    width: 90px;
-    height: 35px;
+    width: 120px;
+    height: 30px;
     border-radius: 30px;
     
     color: white;
@@ -129,56 +143,215 @@ header img {
     background-color: #FF5F00;
 
     border-style: none;
-    
+
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 4px;
+    padding: 4px;
+}
+.conteudo-banner button span {
+    cursor:pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+}
+
+.conteudo-banner button span:after {
+    content: '\1F86A';
+    position: absolute;
+
+    opacity: 0;
+    top: 0;
+
+    right: -20px;
+    transition: 0.5s;
+}
+
+
+.conteudo-banner button:hover {
+    background-color: #012437c3;
+}
+
+.conteudo-banner button:hover span {
+    padding-right: 25px;
+}
+
+.conteudo-banner button:hover span:after {
+    opacity: 1;
+    right: 0;
+}
+
+
+
+#sobre button {
+    width: 150px;
+    height: 30px;
+    border-radius: 20px;
+
+    color: white;
+    font-family: 'Press Start 2P';
+    font-size: 15px;
+
+    background-color: var(--azul);
+    border-style: none;  
+}
+
+#sobre .botao-dois {
+    background-color: #FF5F00;
 }
 
 #sobre {
-    height: 800px;
+    height: 1000px;
 
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-evenly;
+
 
     text-align: center;
     padding: 100px 25%;
 }
 
 #sobre img {
-    width: 150px;
-    height: 150px;
-
-    display: flex;
+    width: 20%;
 }
 
+#sobre .homem-um {
+    flex-direction: row;
+    display: flex;
+    align-items: center;
+
+
+}
+
+#sobre .homem-dois {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+}
+
+
+#sobre .container-sobre {
+    display: flex;
+    justify-content: end;
+}
+
+
+
+#sobre p {
+    color: #FFFCF7;
+    font-family: 'Press Start 2P';
+    font-size: 18px;
+
+    text-align: justify;
+    padding: 30px;
+
+    text-indent: 30px;
+    letter-spacing: 1px;
+    line-height: 1.3;
+}
+
+
+
+#sobre h2 {
+    margin-bottom: 100px;
+}
+
+
 h2 {
+    padding: 20px;
     font-family: 'Gameplay';
     font-size: 26px;
     color: var(--branco);
 }
 
-#cases {
-    text-align: center;
+.container {
+    position: relative;
+    width: 100%;
+    max-width: 360px;
+  }
+  
+.image {
+    display: block;
+    width: 100%;
+    height: auto;
+  }
+  
+.overlay {
+    position: absolute; 
+    bottom: 0; 
+    background: rgb(0, 0, 0);
+    background: rgba(0, 0, 0, 0.6); 
+    
+    color: #f1f1f1; 
+    width: 100%;
+    transition: .5s ease;
+    opacity:0;
 
-    padding-bottom: 500px;
-    margin-bottom: 500px;
+    color: white;
+ 
+
+    font-size: 18px;
+    padding: 20px;
+
+    text-align: center;
+}
+  
+  .container:hover .overlay {
+    opacity: 1;
 }
 
-#contato {
+#cases {
     text-align: center;
 
     padding-bottom: 100px;
     margin-bottom: 100px;
 }
 
+#cases h2 {
+    margin-bottom: 100px;
+    margin-top: 200px;
+}
+
+.container-cards {
+    width: 100%;
+
+    display: flex;
+    justify-content: space-between;
+}
+
+#contato h2 {
+    padding-bottom: 100px;
+
+}
+
+#contato {
+    text-align: center;
+
+    padding-bottom: 80px;
+    margin-bottom: 80px;
+}
+
+
 #contato p {
-    margin-bottom: 70px;
+    border-bottom: 2px solid #ffffff; width: 100%; padding-bottom:20px;
+
+    margin-bottom: 50px;
+}
+
+
+#campo-nome {
+    width: 48%;
+}
+
+#campo-email {
+    width: 48%;
 }
 
 .campo-um {
-    width: 50%;
-
     flex-flow: row wrap;
     justify-content: space-between;
+ 
     align-items: flex-end;
    
 }
@@ -188,10 +361,11 @@ h2 {
 }
 
 #contato form {
-    width: 50%;
+    width: 40%;
 
     margin: 0 auto;
-    padding: 60px 0;
+    padding: 40px 0;
+
 
     display: flex;
     justify-content: end;
@@ -201,18 +375,14 @@ h2 {
     border-radius: 20px;
 
     background-color: #1D191E;
-
     color: #FFFCF7;
     font-family: 'Press Start 2P';
 }
 
-
-
 .campo {
     width: 80%;
 
-    margin-bottom: 30px;
-
+    margin-bottom: 20px;
 
     display: flex;
     justify-content: flex-end;
@@ -221,11 +391,13 @@ h2 {
 }
 
 .campo input {
+    color: #FFFCF7;
     height: 30px;
 
     background-color: transparent;
 
     border-radius: 15px;
+    border: none;
 
     outline: 3px solid white;
     justify-content: flex-end;
@@ -237,8 +409,8 @@ h2 {
 }
 
 .campo-textarea {
-    width: 60%;
-    margin-bottom: 30px;
+    width: 80%;
+    margin-bottom: 10px;
     text-align: left;
 
     justify-content: flex-end;
@@ -249,7 +421,7 @@ h2 {
 }
 
 .campo-textarea textarea {
-    color: white;
+    color: #FFFCF7;
     background-color: transparent;
 
     border: none;
@@ -263,6 +435,11 @@ h2 {
     outline: 3px solid white;
 
     border-radius: 15px;
+    resize: none;
+}
+
+.campo input:focus, .campo-textarea textarea:focus {
+    outline: 2px solid var(--azul);
 }
 
 #contato form button {
@@ -273,17 +450,23 @@ h2 {
     font-size: 14px;
     font-weight: 600;
 
-    color: white;
-    background-color: #02466B;
+    color: #FFFCF7;
+    background-color: #058CD7;
 
     border: none;
     border-radius: 20px;
 
     cursor: pointer;
+    text-transform: uppercase;
+    transition: background-color 500ms ease;
 }
 
 #contato form button:hover {
     background-color: #02466B;
+}
+
+#contato form input::placeholder, #contato form textarea::placeholder {
+    color: #FFFCF7;
 }
 
 
@@ -291,7 +474,7 @@ h2 {
 
 footer {
     height: 250px;
-    background-color: #1D191E;
+    background-color: #1d191ece;
 }
 
 
