--- a/style.css
+++ b/style.css
@@ -20,7 +20,13 @@
 
 body {
     background: rgb(2, 70, 107);
-    background: linear-gradient(0deg, #058CD7 0%, #035A8A 5%, rgba(29, 25, 30, 1) 80%);
+    background: linear-gradient(0deg, #033a5848 0%, #05334d9a 10%, rgba(29, 25, 30, 1) 90%), url(img/bk2.png) no-repeat;
+    background-position: bottom;
+
+
+    /*background: rgb(2, 70, 107);
+    background: linear-gradient(0deg, #033a58 0%, #05334d 5%, rgba(29, 25, 30, 1) 80%);
+    linear-gradient(0deg, rgba(2,173,231,0.5), rgba(2,173,231,0.5)), url(img/bk2.png) no-repeat;*/
 }
 
 
@@ -34,7 +40,9 @@ body {
 .banner {
     height: 100vh;
 
-    background-image: url(img/escritorio.png);
+    background: url(img/escritorio.png);
+
+    background-color: 100%;
     background-repeat: no-repeat;
 
     background-position: 10%;
@@ -42,6 +50,7 @@ body {
 }
 
 header {
+    backdrop-filter: blur(2px);
     overflow: hidden;
     background-color: #02466b93;
     padding: 5px 10px;
@@ -53,10 +62,11 @@ header {
     position: fixed;
     top: 0;
     width: 100%;
+
+    z-index: 1;
 }
 
 header div.container-grid {
-
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -66,11 +76,21 @@ header img {
     width: 250px;
 }
 
+header button {
+    display: none;
+}
+
 .menu {
-    width: 700px;
+    width: 680px;
 
     display: flex;
     justify-content: space-between;
+}
+
+.menu a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .menu a {
@@ -80,30 +100,34 @@ header img {
     font-size: 18px;
 
     text-decoration: underline transparent;
-}
 
-.menu button {
     background-color: #011825bb;
 
-    width: 250px;
+    width: 200px;
     height: 40px;
     border-radius: 18px;
     border: none;
 }
 
-.menu button.um, button.dois {
-    width: 200px;
+.menu a.especial {
+    width: 250px;
 }
 
-.menu button:hover {
+.menu a:hover {
     background-color: #058CD7;
 }
+
+
 
 .conteudo-banner a {
     color: white;
     text-decoration: none;
+
+    font-weight: 50;
+    word-spacing: 2px;
 }
-.conteudo-banner p {
+
+.conteudo-banner h1 {
     color: white;
 
     background-color: #058CD7;
@@ -116,6 +140,8 @@ header img {
     display: flex;
     flex-direction: column;
     justify-content: center;
+
+    font-weight: 500;
 }
 
 .conteudo-banner {
@@ -129,13 +155,11 @@ header img {
     justify-content: center;
 }
 
-
-
 .conteudo-banner button {
     width: 120px;
     height: 30px;
     border-radius: 30px;
-    
+
     color: white;
     font-family: 'Gameplay';
     font-size: 18px;
@@ -149,8 +173,9 @@ header img {
     margin: 4px;
     padding: 4px;
 }
+
 .conteudo-banner button span {
-    cursor:pointer;
+    cursor: pointer;
     display: inline-block;
     position: relative;
     transition: 0.5s;
@@ -183,6 +208,65 @@ header img {
 
 
 
+.quadrado-azul button {
+    background-color: #058CD7;
+}
+
+.quadrado-azul {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+
+    height: 200px;
+    width: 200px;
+    background-color: none;
+    border: 4px solid var(--azul);
+    border-radius: 10px;
+}
+
+#sobre .homem-um img {
+    width: 60%;
+}
+
+.quadrado-laranja button {
+    background-color: #FF5F00;
+}
+
+.container-sobre {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: flex-end;
+}
+
+.container-sobre-um {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+
+}
+
+.quadrado-laranja {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: space-evenly;
+
+    height: 200px;
+    width: 200px;
+    background-color: none;
+    border: 4px solid var(--laranja);
+    border-radius: 10px;
+}
+
+#sobre .homem-dois img {
+    width: 60%;
+}
+
+#sobre .botao-dois {
+    background-color: #FF5F00;
+}
+
 #sobre button {
     width: 150px;
     height: 30px;
@@ -192,125 +276,134 @@ header img {
     font-family: 'Press Start 2P';
     font-size: 15px;
 
-    background-color: var(--azul);
-    border-style: none;  
-}
-
-#sobre .botao-dois {
-    background-color: #FF5F00;
+    border-style: none;
 }
 
 #sobre {
-    height: 1000px;
+    height: 800px;
+    margin-bottom: 80px;
+
 
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: flex-end;
+
+    gap: 50px;
 
 
     text-align: center;
-    padding: 100px 25%;
+    padding: 100px 11%;
 }
-
-#sobre img {
-    width: 20%;
-}
-
-#sobre .homem-um {
-    flex-direction: row;
-    display: flex;
-    align-items: center;
-
-
-}
-
-#sobre .homem-dois {
-    display: flex;
-    flex-direction: row-reverse;
-    align-items: center;
-}
-
-
-#sobre .container-sobre {
-    display: flex;
-    justify-content: end;
-}
-
-
 
 #sobre p {
+    border-top: 1px solid var(--azul);
+
+    word-spacing: -6px;
+    font-weight: 20;
     color: #FFFCF7;
     font-family: 'Press Start 2P';
     font-size: 18px;
 
-    text-align: justify;
-    padding: 30px;
+    text-align: left;
+    padding: 12px;
 
-    text-indent: 30px;
+    text-indent: 20px;
     letter-spacing: 1px;
-    line-height: 1.3;
+    line-height: 1.4;
+
+    width: 820px;
 }
 
+#sobre .p-laranja {
+    border-top: 1px solid var(--laranja);
+    text-align: right;
+}
 
 
 #sobre h2 {
-    margin-bottom: 100px;
+    margin-bottom: 20px;
 }
-
 
 h2 {
     padding: 20px;
     font-family: 'Gameplay';
     font-size: 26px;
     color: var(--branco);
+
+    font-weight: 500;
 }
+
 
 .container {
     position: relative;
     width: 100%;
     max-width: 360px;
-  }
-  
+}
+
 .image {
     display: block;
     width: 100%;
     height: auto;
-  }
-  
+    border-radius: 10px;
+}
+
 .overlay {
-    position: absolute; 
-    bottom: 0; 
+    position: absolute;
+    bottom: 0;
     background: rgb(0, 0, 0);
-    background: rgba(0, 0, 0, 0.6); 
-    
-    color: #f1f1f1; 
+    background: rgba(0, 0, 0, 0.9);
+
+    color: #f1f1f1;
     width: 100%;
     transition: .5s ease;
-    opacity:0;
+    opacity: 0;
 
     color: white;
- 
 
-    font-size: 18px;
     padding: 20px;
 
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: stretch;
+    align-items: center;
+
+    text-align: justify;
+    font-family: 'Press Start 2P';
+
+    border-radius: 4px;
 }
-  
-  .container:hover .overlay {
+
+.overlay h3 {
+    color: #058CD7;
+    line-height: 1.1;
+    text-align: start;
+    padding: 10px;
+    padding-bottom: 10px;
+    font-size: 18px;
+}
+
+.overlay p {
+
+    line-height: 1.1;
+    text-indent: 35px;
+    font-size: 14px;
+    text-align: start;
+}
+
+.container:hover .overlay {
     opacity: 1;
 }
 
 #cases {
     text-align: center;
 
-    padding-bottom: 100px;
-    margin-bottom: 100px;
+    padding-bottom: 80px;
+    margin-bottom: 40px;
 }
 
 #cases h2 {
     margin-bottom: 100px;
-    margin-top: 200px;
+    margin-top: 100px;
 }
 
 .container-cards {
@@ -320,47 +413,77 @@ h2 {
     justify-content: space-between;
 }
 
-#contato h2 {
-    padding-bottom: 100px;
+
+.chamada {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    padding: 20px;
+}
+
+.chamada h3 {
+    text-decoration-thickness: bold;
+    padding-bottom: 10px;
+
+    font-family: 'Gameplay';
+    font-size: 22px;
+    color: var(--branco);
+
+    font-weight: 500;
+}
+
+.chamada p {
+    font-family: 'Gameplay';
+    font-size: 20px;
+    color: #058CD7;
 
 }
 
 #contato {
     text-align: center;
 
-    padding-bottom: 80px;
+    padding: 60px;
+
     margin-bottom: 80px;
 }
 
-
 #contato p {
-    border-bottom: 2px solid #ffffff; width: 100%; padding-bottom:20px;
+    border-bottom: 4px solid #FFFCF7;
+    width: 100%;
+    padding-bottom: 20px;
 
     margin-bottom: 50px;
 }
 
-
 #campo-nome {
     width: 48%;
+    backdrop-filter: blur(6px);
 }
 
 #campo-email {
     width: 48%;
+    backdrop-filter: blur(6px);
 }
 
 .campo-um {
     flex-flow: row wrap;
     justify-content: space-between;
- 
+
     align-items: flex-end;
-   
 }
 
 #campo-assunto {
     width: 100%;
+    backdrop-filter: blur(6px);
 }
 
 #contato form {
+    backdrop-filter: blur(1px);
+
+    background-color: #1d191ec9;
+
     width: 40%;
 
     margin: 0 auto;
@@ -374,8 +497,7 @@ h2 {
 
     border-radius: 20px;
 
-    background-color: #1D191E;
-    color: #FFFCF7;
+    color: var(--branco);
     font-family: 'Press Start 2P';
 }
 
@@ -410,7 +532,7 @@ h2 {
 
 .campo-textarea {
     width: 80%;
-    margin-bottom: 10px;
+    margin-bottom: 25px;
     text-align: left;
 
     justify-content: flex-end;
@@ -418,6 +540,8 @@ h2 {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+
+    backdrop-filter: blur(6px);
 }
 
 .campo-textarea textarea {
@@ -438,8 +562,9 @@ h2 {
     resize: none;
 }
 
-.campo input:focus, .campo-textarea textarea:focus {
-    outline: 2px solid var(--azul);
+.campo input:focus,
+.campo-textarea textarea:focus {
+    outline: 2px solid var(--laranja);
 }
 
 #contato form button {
@@ -451,30 +576,32 @@ h2 {
     font-weight: 600;
 
     color: #FFFCF7;
-    background-color: #058CD7;
+    background-color: var(--laranja);
+
 
     border: none;
     border-radius: 20px;
 
     cursor: pointer;
-    text-transform: uppercase;
+
     transition: background-color 500ms ease;
 }
 
 #contato form button:hover {
-    background-color: #02466B;
+    background-color: var(--azul);
 }
 
-#contato form input::placeholder, #contato form textarea::placeholder {
-    color: #FFFCF7;
+#contato form input::placeholder,
+#contato form textarea::placeholder {
+    color: #969292;
 }
 
 
 
 
 footer {
-    height: 250px;
-    background-color: #1d191ece;
+    height: 180px;
+    background-color: #1d191ed3;
 }
 
 
@@ -482,8 +609,8 @@ footer .container-grid {
     height: 100%;
 
     display: flex;
-    
- 
+
+
     justify-content: end;
     align-items: center;
 }
@@ -517,3 +644,631 @@ footer .container-grid {
 }
 
 
+
+.chamada a:hover {
+    background-color: var(--azul);
+}
+
+
+.chamada a {
+    background-color: var(--laranja);
+    border: none;
+
+    width: 300px;
+    height: 60px;
+
+    border-radius: 6px;
+
+    color: var(--branco);
+
+    font-family: 'Gameplay';
+    font-size: 18px;
+
+    text-decoration: none;
+
+    text-align: center;
+    padding: 10px;
+}
+
+
+@media screen and (max-width: 1400px) {
+    .overlay h3 {
+        font-size: 18px;
+    }
+
+    .overlay {
+        position: absolute;
+        left: 0%;
+        bottom: -10%;
+
+        background: rgb(0, 0, 0);
+        background: rgba(0, 0, 0, 0.8);
+
+
+        animation: CSSscrollReveal ease-in-out both;
+        animation-timeline: view();
+        animation-range: entry 60% cover 50%;
+    }
+
+    @keyframes CSSscrollReveal {
+        from {
+            opacity: 0;
+            transform: translateY(160px);
+        }
+
+        to {
+            opacity: 1;
+            transform: translateY(0);
+        }
+    }
+
+    .container-cards {
+        flex-direction: row;
+    }
+
+    .container {
+        padding-bottom: 50px;
+        height: 443px;
+
+        flex-grow: 0;
+        flex-shrink: 0;
+        flex-basis: 40%;
+    }
+
+    .overlay {
+        width: 90%;
+        height: 100%;
+        line-height: 1.5;
+    }
+
+    .conteudo-banner {
+        height: calc(100vh - 280px);
+    }
+
+    header {
+        position: relative;
+        overflow: visible;
+    }
+
+    header button {
+        width: 50px;
+
+        display: unset;
+
+        background: none;
+        border: none;
+    }
+
+    header svg {
+        fill: white
+    }
+
+    nav.menu a {
+        background-color: #FF5F00;
+    }
+
+    nav.menu {
+        height: 470px;
+        width: 280px;
+
+        padding: 0px 20px;
+
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+
+        background-color: #1d191ee7;
+
+
+        position: absolute;
+        top: 130px;
+        right: 0px;
+    }
+
+    #sobre {
+        padding: 100px 12%;
+    }
+
+    .container img {
+        width: 90%;
+    }
+
+    .chamada {
+        padding: 50px;
+    }
+
+    #contato form {
+        width: 45%;
+    }
+}
+
+@media screen and (max-width: 1330px) {
+    #sobre {
+        padding: 100px 10%;
+    }
+
+    header img {
+        width: 230px;
+    }
+
+    .overlay h3 {
+        font-size: 16px;
+    }
+}
+
+@media screen and (max-width: 1270px) {
+    #sobre {
+        font-size: 16px;
+        padding: 100px 8%;
+    }
+
+    #contato form {
+        width: 50%;
+    }
+}
+
+@media screen and (max-width: 1220px) {
+    #sobre {
+        padding: 100px 6%;
+    }
+
+    .overlay {
+        padding: 16px;
+        height: 100%;
+        width: 85%;
+    }
+
+    .container img {
+        width: 95%;
+    }
+
+    .container {
+        width: 100%;
+        max-width: 320px;
+    }
+
+    .container-cards {
+        justify-content: center;
+    }
+
+    .overlay {
+        line-height: 1.8;
+        padding: 16px;
+        height: 100%;
+        width: 95%;
+    }
+}
+
+@media screen and (max-width: 1000px) {
+    nav.menu {
+        height: 420px;
+        width: 220px;
+
+        padding: 0px 15px;
+    }
+
+    nav.menu a {
+        font-size: 16px;
+        width: 150px;
+    }
+
+    nav.menu a.especial {
+        width: 200px;
+    }
+
+    #cases h2 {
+        font-size: 24px;
+    }
+
+    #sobre h2 {
+        font-size: 24px;
+    }
+
+    #sobre p {
+        font-size: 16px;
+    }
+
+    #contato form {
+        width: 80%;
+    }
+
+    header img {
+        width: 220px;
+    }
+
+    header svg {
+        width: 48px;
+        height: 48px;
+    }
+
+    .banner h1 {
+        font-size: 18px;
+    }
+
+    .banner a {
+        font-size: 17px;
+    }
+
+    .banner button {
+        width: 125px;
+    }
+
+    .chamada h3 {
+        font-size: 20px;
+        font-weight: 80;
+    }
+
+
+
+    .container {
+        height: 420px;
+    }
+}
+
+
+
+
+
+@media screen and (max-width: 1080px) {
+    footer {
+        height: 180px;
+    }
+
+    footer .container-grid {
+        padding: 40px;
+
+        flex-direction: column;
+    }
+
+    footer p {
+        width: 100%;
+        text-align: center;
+        margin-bottom: 18x;
+    }
+
+    .redes-sociais {
+        align-items: center;
+    }
+
+    .redes-sociais p {
+        font-size: 18px;
+
+    }
+
+    .icones-redes img {
+        width: 80%;
+    }
+
+    #contato form {
+        width: 60%;
+    }
+}
+
+@media screen and (max-width: 930px) {
+    .container {
+        height: 444px;
+    }
+
+}
+
+@media screen and (max-width:900px) {
+    .overlay p {
+        font-size: 14px;
+        letter-spacing: 1px;
+        line-height: 1.2;
+    }
+
+    .overlay h3 {
+        font-size: 18px;
+    }
+
+    .overlay {
+        position: absolute;
+        left: 100%;
+        bottom: 14%;
+
+        width: 90%;
+        height: 95%;
+        line-height: 1.2;
+
+        background: rgb(0, 0, 0);
+        background: rgba(0, 0, 0, 0.4);
+
+
+        animation: CSSscrollReveal ease-in-out both;
+        animation-timeline: view();
+        animation-range: entry 60% cover 60%;
+
+    }
+
+    @keyframes CSSscrollReveal {
+        from {
+            opacity: 0;
+            transform: translateY(160px);
+        }
+
+        to {
+            opacity: 1;
+            transform: translateY(0);
+        }
+    }
+
+    .container-cards {
+        align-items: flex-start;
+        flex-direction: column;
+
+    }
+
+    .container {
+        padding-bottom: 50px;
+
+        flex-grow: 0;
+        flex-shrink: 0;
+        flex-basis: 40%;
+    }
+
+    #contato form {
+        width: 70%;
+    }
+
+    #sobre p {
+        font-size: 16px;
+        line-height: 1.6;
+    }
+
+    #sobre {
+        padding: 100px 36px;
+    }
+
+    #sobre button {
+        font-size: 14px;
+        width: 130px;
+        height: 20px;
+    }
+
+    
+    
+}
+
+@media screen and (max-width: 800px) {
+    .card {
+        flex-basis: 45%;
+    }
+
+    .redes-sociais p {
+        font-size: 16px;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    #sobre {
+        height: unset;
+        margin-bottom: 40px;
+    }
+
+    #sobre h2 {
+        margin-bottom: 50px;
+    }
+
+    #sobre p {
+        margin-bottom: 30px;
+    }
+
+    #cases,
+    #contato {
+        margin-bottom: unset;
+    }
+
+    #portfolio a {
+        width: 100%;
+        text-align: center;
+    }
+
+    .campo,
+    .campo-textarea,
+    #contato form button {
+        width: 75%;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .container-grid {
+        width: 90%;
+    }
+
+    header img {
+        width: 200px;
+    }
+
+    .banner {
+        background-size: cover;
+    }
+
+    .conteudo-banner p {
+        font-size: 24px;
+    }
+
+    nav.menu {
+        width: 100%;
+
+        display: none;
+    }
+
+    #sobre {
+        padding-left: 0px;
+        padding-right: 0px;
+    }
+
+    #sobre p {
+        width: 90%;
+        margin: 0 auto;
+        margin-bottom: 20px;
+    }
+
+    #cases {
+        width: 100%;
+        margin: unset;
+    }
+
+    .container-cards {
+        flex-wrap: nowrap;
+
+        gap: 40px;
+
+        overflow: auto;
+    }
+
+    .card {
+        height: 400px;
+        width: 280px;
+
+        flex-basis: unset;
+    }
+
+
+    #portfolio {
+        margin-bottom: 0;
+    }
+
+    #contato {
+        padding-top: 70px;
+        color: white;
+    }
+
+    #contato h2 {
+        margin-bottom: 0px;
+    }
+
+    #contato form {
+        width: 100%;
+        border-radius: 0;
+    }
+
+    footer .redes-sociais p {
+        font-size: 16px;
+    }
+
+}
+
+@media screen and (max-width: 400px) {
+    header img {
+        width: 160px;
+    }
+
+    header svg {
+        width: 40px;
+    }
+
+    .conteudo-banner p {
+        font-size: 20px;
+    }
+
+    footer img {
+        width: 200px;
+    }
+
+}
+
+@media screen and (max-width: 320px) {
+    #contato form {
+        width: 100%;
+    }
+
+    #contato {
+        padding: 0px;
+    }
+
+    .container img {
+        width: 60%;
+    }
+
+    header img {
+        width: 40%;
+    }
+
+    header svg {
+        width: 18%;
+    }
+
+    header {
+        height: 100px;
+    }
+
+    .banner h1 {
+        font-size: 13px;
+    }
+
+    .banner a {
+        letter-spacing: 1px;
+        font-size: 15px;
+    }
+
+    .banner button {
+        width: 78px;
+        height: 30px;
+    }
+
+    #sobre h2 {
+        font-size: 20px;
+    }
+
+    #cases h2 {
+        font-size: 20px;
+    }
+
+
+
+    .overlay p {
+        font-size: 10px;
+        letter-spacing: 1px;
+        line-height: 1.2;
+    }
+
+    .overlay h3 {
+        font-size: 12px;
+    }
+
+    .overlay {
+        position: absolute;
+        left: 0;
+        bottom: 20%;
+
+        width: 60%;
+        height: 60%;
+        line-height: 1.2;
+
+        background: rgb(0, 0, 0);
+        background: rgba(0, 0, 0, 0.4);
+
+
+        animation: CSSscrollReveal ease-in-out both;
+        animation-timeline: view();
+        animation-range: entry 20% cover 20%;
+
+    }
+
+    @keyframes CSSscrollReveal {
+        from {
+            opacity: 0;
+            transform: translateY(160px);
+        }
+
+        to {
+            opacity: 1;
+            transform: translateY(0);
+        }
+    }
+
+    .container-cards {
+        align-items: center;
+        flex-direction: column;
+
+    }
+
+    .container {
+        padding-bottom: 50px;
+    }
+
+
+
+}
