--- a/style.css
+++ b/style.css
@@ -613,6 +613,14 @@ footer .container-grid {
     padding: 10px;
 }
 
+.menu-fechado {
+    display: none;
+}
+
+#icone-barras {
+    display: none;
+}
+
 @media screen and (max-width: 1400px) {
     .overlay h3 {
         font-size: 18px;
@@ -1133,8 +1141,6 @@ footer .container-grid {
 
     nav.menu {
         width: 100%;
-
-        display: none;
     }
 
     #cases {
